Fixed spacing on dashboard items

--- a/src/page/Home/Game/Details/Details.module.css
+++ b/src/page/Home/Game/Details/Details.module.css
@@ -5,7 +5,7 @@
   padding: 15px;
   border: 1px solid white;
   border-radius: .25rem;
-  height: 100%;
+  height: 250px;
   overflow: auto;
 }
 
@@ -16,5 +16,6 @@
   
   .box {
     margin-bottom: 50px;
+    height: 100%;
   }
 }
