--- a/src/page/Home/Game/Game.module.css
+++ b/src/page/Home/Game/Game.module.css
@@ -2,7 +2,7 @@
   padding: 10px;
   display: grid;
   grid-template-columns: 900px minmax(400px, auto);
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: 80px 250px 100px auto;
   grid-gap: 15px;
 }
 
