--- a/src/page/Home/Game/Scoreboard/Scoreboard.module.css
+++ b/src/page/Home/Game/Scoreboard/Scoreboard.module.css
@@ -5,7 +5,7 @@
   padding: 15px;
   border: 1px solid white;
   border-radius: .25rem;
-  height: 100%;
+  height: 80px;
   overflow: auto;
 }
 
